# stellux

./: .env.example  .gitignore  DEPLOY.md  README.md  build-and-push.sh  deploy.sh  docker-compose.prod.yml
backend/: .dockerignore  .env.example  .env.production.example  Cargo.toml  Dockerfile  MIGRATION.md  migration_report.json  migration_report.md
backend/migrations/: 001_initial_schema.sql  001_initial_schema_down.sql  002_site_config.sql  003_social_config.sql  004_ai_config.sql  005_blog_references.sql  006_document_references.sql  007_mcp_config.sql  008_blog_global_summary.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/handlers/: ai.rs  archive.rs  auth.rs  blog.rs  category.rs  data.rs  directory.rs  document.rs  file.rs  friend_link.rs  mcp.rs  mod.rs  project.rs  search.rs  site_config.rs  stats.rs  tag.rs  text.rs
backend/src/mcp/: auth.rs  mod.rs  server.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: archive.rs  blog.rs  category.rs  directory.rs  document.rs  file.rs  friend_link.rs  mcp.rs  mod.rs  project.rs  search.rs  site_config.rs  tag.rs  text.rs  user.rs
backend/src/repositories/: archive_repo.rs  blog_repo.rs  category_repo.rs  directory_repo.rs  document_repo.rs  file_repo.rs  friend_link_repo.rs  mod.rs  project_repo.rs  search_repo.rs  site_config_repo.rs  tag_repo.rs  text_repo.rs  user_repo.rs
backend/src/routes/: ai.rs  archive.rs  auth.rs  blog.rs  category.rs  data.rs  directory.rs  document.rs  file.rs  friend_link.rs  health.rs  mcp.rs  mod.rs  project.rs  search.rs  site_config.rs  stats.rs  tag.rs  text.rs
backend/src/services/: ai_service.rs  auth_service.rs  blog_service.rs  cache_service.rs  mod.rs  s3_service.rs
backend/src/utils/: markdown.rs  migration.rs  (+2 more)
(+98 files in other folders)
