[package]
name = "stellux-backend"
version = "0.1.0"
edition = "2021"
authors = ["Blog System"]
description = "A high-performance blog backend built with Rust and Axum"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "derive",
    "chrono",
    "uuid",
] }

# Redis
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.1.0", features = ["chrono04"] }
base64 = "0.22"

# Authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"

# Markdown rendering
pulldown-cmark = "0.13"
syntect = "5"
regex = "1"

# S3 storage
aws-sdk-s3 = "1"
aws-config = "1"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }

# Async trait (required for custom extractors)
async-trait = "0.1"
futures = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20", features = ["derive"] }

[[bin]]
name = "stellux-backend"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
